# synapse

./: .env.example  .gitignore  ARCHITECTURE.md  Justfile  PLAN.md  README.md  api_server.py  architecture.html  claude.md  diagrams.md  evals.py  langchain_surreal.py  london-hackathon-full-details.md  main.py  pyproject.toml  render.yaml  seed_data.py  surreal_test.py  test.py
.claude/skills/langchain/: SKILL.md
.claude/skills/langchain/agents/: openai.yaml
.claude/skills/python/: SKILL.md
.claude/skills/python/agents/: openai.yaml
.claude/skills/surrealdb/: SKILL.md
.claude/skills/surrealdb/agents/: openai.yaml
.claude/skills/vite-typescript/: SKILL.md
.claude/skills/vite-typescript/agents/: openai.yaml
data/sample_reflections/: 01_work_stress.txt  02_friendship.txt  03_morning_routine.txt  04_perfectionism.txt  05_sunday_anxiety.txt  06_comparison.txt  07_boundary.txt  08_progress.txt  09_insomnia.txt  10_gratitude.txt  11_childhood_criticism.txt  12_mother_anxiety.txt  13_abandonment_pattern.txt  14_people_pleasing_origins.txt  15_inner_critic.txt  16_numbing_pattern.txt  17_shame_spiral.txt  18_relationship_pattern.txt
docs/: hosting-research.md
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  icons.tsx  styles.css
frontend/src/pages/: AuthPage.tsx
pitch/: PITCH_PLAYBOOK.md
reflect/: agent.py  app.py  auth.py  chat_agent.py  db.py  extraction.py  graph_store.py  prompts.py  service.py  telegram_bot.py
scripts/: dedup_themes.py  delete_reflections.py
tests/: test_smoke.py
